--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,30 @@
-nav.developer{
-  margin:30px;
-  padding:30px;
-  border-top: 1px gray solid;
-}
+.developer{
+  background-color:gray;
 
-a.developer{
+}
+nav.developer{
+  margin-top:150px;
+  padding:30px;
+}
+.developer > a{
   font-family:"나눔바른고딕";
+  color:white;
   margin-left:30px;
   margin-right:30px;
 }
+
+
+
 .section-login{
-  width:60%;
   position:relative;
+  padding:30px;
   margin-top:50px;
   margin-bottom:50px;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding:30px;
-  border:1px solid gray;
-  border-radius:5px;
-}
-.section-register{
-  width:70%;
-  position:relative;
-  margin-top:50px;
-  margin-bottom:50px;
-  margin-left: 15%;
-  margin-right: 15%;
-  padding:30px;
   border:1px solid gray;
   border-radius:5px;
 }
 .section-login-comp1 {
+  position:relative;
   margin-top:20px;
   margin-bottom:20px;
 }
@@ -39,7 +32,17 @@ a.developer{
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.section-register{
+  position:relative;
+  margin-top:50px;
+  margin-bottom:50px;
+  padding:30px;
+  border:1px solid gray;
+  border-radius:5px;
+}
 .section-register-comp1 {
+  position:relative;
   margin-top:25px;
   margin-bottom:25px;
 }
@@ -47,6 +50,9 @@ a.developer{
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+
+
 .intro{
   margin: 30px;
   padding:20px;
@@ -62,23 +68,59 @@ h1.intro-plain{
   font-size:50px;
 }
 p.intro-plain{
-  font-size:30px;
+  font-size:25px;
   margin:20px;
 }
-
 .intro-img{
   max-width: 60%;
-
   height: auto;
 }
+
+
+
 .indexcarousel{
-  max-height:300px;
+  max-height:500px;
   overflow:hidden;
 }
-.carousel-caption h2{
-  text-decoration-color:black;
+.carousel-caption h2, .carousel-caption p{
+  color:greenyellow;
 }
-.indexcarousel img{
+.indexcarousel > img{
   max-height:initial;
   margin-top:-15%;
+  margin-bottom:-15%;
+}
+.bd{
+  margin:10px;
+}
+.NavbarBar{
+  background-color:greenyellow;
+}
+
+.text-social{
+  font-size: 13px;
+}
+a.btn-facebook{
+  background-color:#3b5998;
+  color:#FFFFFF;
+}
+a.btn-googleplus{
+  background-color:#db4a39;
+  color:#FFFFFF;
+}
+a.btn-twitter{
+  background-color:#1da1f2;
+  color:#FFFFFF;
+ }
+a.btn-koin{
+  background-color:#175C8E;
+  color:#FFFFFF;
+}
+a.btn-naver{
+  background-color:#1EC800;
+  color:#FFFFFF;
+}
+a.btn-kakao{
+  background-color:#fcce00;
+  color:#FFFFFF;
 }
